--- a/mavenTest/pom.xml
+++ b/mavenTest/pom.xml
@@ -53,6 +53,13 @@
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
+          <configuration>
+              <archive>
+                 <manifest>
+                   <mainClass>eng1.mavenTest.App</mainClass>
+                 </manifest>
+              </archive>
+           </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
