--- a/.github/workflows/mavenTest_Workflow.yml
+++ b/.github/workflows/mavenTest_Workflow.yml
@@ -12,9 +12,13 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+   #runs-on: ubuntu-latest
+   runs-on: ${{ matrix.os }}
+    strategy:
+    matrix:
+    os: [ubuntu-latest, macos-latest, windows-latest]
 
-    steps:
+   steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v2
@@ -24,3 +28,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file mavenTest/pom.xml # mvn -B package --file pom.xml
+      
+      uses: actions/upload-artifact@v2
+        with:
+        name: mavenTest/target/my-artifact
+
