--- a/.github/workflows/mavenTest_Workflow.yml
+++ b/.github/workflows/mavenTest_Workflow.yml
@@ -14,9 +14,9 @@ jobs:
 
    #runs-on: ubuntu-latest
    runs-on: ${{ matrix.os }}
-    strategy:
+   strategy:
     matrix:
-    os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
    steps:
     - uses: actions/checkout@v2
@@ -29,7 +29,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file mavenTest/pom.xml # mvn -B package --file pom.xml
       
-      uses: actions/upload-artifact@v2
-        with:
+    - uses: actions/upload-artifact@v2
+      with:
         name: mavenTest/target/my-artifact
 
