--- a/.github/workflows/mavenTest_Workflow.yml
+++ b/.github/workflows/mavenTest_Workflow.yml
@@ -31,5 +31,6 @@ jobs:
       
     - uses: actions/upload-artifact@v2
       with:
-        name: mavenTest/target/my-artifact
+        name: my-artifact
+        path: mavenTest/target/
 
