--- a/.github/workflows/mavenTest_Workflow.yml
+++ b/.github/workflows/mavenTest_Workflow.yml
@@ -29,8 +29,8 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file mavenTest/pom.xml # mvn -B package --file pom.xml
       
-   # - uses: actions/upload-artifact@v2
-   #   with:
-   #     name: my-artifact
-   #     path: mavenTest/target/
+    - uses: actions/upload-artifact@v2
+      with:
+       name: my-artifact
+       path: mavenTest/target/
 
